--- a/schema-pusher/templates/pod.yaml
+++ b/schema-pusher/templates/pod.yaml
@@ -4,10 +4,10 @@ kind: Pod
 metadata:
   name: {{ .Release.Name }}-pod
   labels:
-    - app.kubernetes.io/name: schema-pusher
-    - helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    - app.kubernetes.io/managed-by: {{ .Release.Service }}
-    - app.kubernetes.io/instance: {{ .Release.Name }}
+    # - app.kubernetes.io/name: schema-pusher
+    # - helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    # - app.kubernetes.io/managed-by: {{ .Release.Service }}
+    # - app.kubernetes.io/instance: {{ .Release.Name }}
     {{- range $.Values.labels }}
         {{ . }}
     {{- end }}
