--- a/schema-pusher/Chart.yaml
+++ b/schema-pusher/Chart.yaml
@@ -1,7 +1,8 @@
 ---
 apiVersion: v2
 name: schema-pusher
-version: 0.1.0
+version: 1.0.0
+appVersion: 0.1.0
 description: A Helm chart for pushing schema files to Red Hat's Service Registry
 type: application
 keywords:
