--- a/schema-pusher/values.yaml
+++ b/schema-pusher/values.yaml
@@ -1,7 +1,10 @@
 ---
 kafka:
   # replace <bootstrap-service> with the internal kafka bootstrap service and <namespace> with the namespace it's on
-  bootstrap: http://<bootstrap-service>.<namespace>.svc.cluster.local:9092
+  bootstrap: https://<kafka-bootstrap-url-goes-here>:443/
+  # if the kafka server is secured with a self-signed certificate, add the secret name that holds the ca.crt key
+  # certificate:
+    # secret: my-kafka-cluster-cluster-ca-cert
 
 service:
   # replace <registry-service> with the internal apicurio service and <namespace> with the namespace it's on
