--- a/schema-pusher/values.yaml
+++ b/schema-pusher/values.yaml
@@ -2,14 +2,19 @@
 kafka:
   # replace <kafka-bootstrap-url-goes-here> with the kafka bootstrap route
   bootstrap: https://<kafka-bootstrap-url-goes-here>:443/
-  # if the kafka server is secured with a self-signed certificate, add the secret name that holds the ca.crt key
-  # certificate:
-    # secret: my-kafka-cluster-cluster-ca-cert
+  # optionally specify a secrets containing a p12 and a password data entries to use with the kafka producer
+  # a server secret containing a ca.p12 and ca.password data entries to be used as a truststore
+  # a user secret containing a user.p12 and user.password data entries to be used as a keystore
+  certificates:
+    server:
+      secret: kafka-cluster-ca-cert
+    user:
+      secret: kafka-user-cert
 
 service:
-  # replace <registry-service> with the internal apicurio service and <namespace> with the namespace it's on
-  # you can also use the route instead
-  registry: http://<registry-service>.<namespace>.svc.cluster.local:8080
+  # replace <service-registry-url-goes-here> with red hat's service registry instance
+  # you can also use the service name internally inside your cluster
+  registry: http://<service-registry-url-goes-here>/
 
 naming:
   # this can be topic/record/topic_record, but for multiple topics, only topic_record is allowed
