add OG resource creation ability &

--- a/RH-schema-registry/templates/service-registry.yaml
+++ b/RH-schema-registry/templates/service-registry.yaml
@@ -3,6 +3,10 @@ kind: ApicurioRegistry
 metadata:
   name: {{ .Values.name }}-{{ .Release.Name }}
   namespace: {{ .Values.namespace }}
+  labels:
+    {{- range $.Values.labels }}
+      {{ . }}
+    {{- end }} 
 spec:
   configuration:
     kafkasql:
