--- a/RH-schema-registry/templates/operators-subscribtion.yaml
+++ b/RH-schema-registry/templates/operators-subscribtion.yaml
@@ -5,7 +5,7 @@ metadata:
   name: rhsso-operator-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": pre-install,post-delete
+    "helm.sh/hook": pre-install
 spec:
   channel: alpha
   installPlanApproval: Automatic
@@ -20,7 +20,7 @@ metadata:
   name: keycloak-operator-{{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": pre-install,post-delete
+    "helm.sh/hook": pre-install
 spec:
   channel: alpha
   installPlanApproval: Automatic
@@ -29,3 +29,18 @@ spec:
   sourceNamespace: openshift-marketplace
   startingCSV: keycloak-operator.v16.1.0
 {{ end }}
+---
+apiVersion: operators.coreos.com/v1alpha1
+kind: Subscription
+metadata:
+  name: {{ .Values.subscription.name }}-{{ .Release.Name }}
+  namespace: {{ .Release.Namespace}}
+  annotations:
+    "helm.sh/hook": pre-install
+spec:
+  channel: {{ .Values.subscription.channel }}
+  installPlanApproval: {{ .Values.subscription.installPlanApproval }}
+  name: {{ .Values.subscription.name }}
+  source: {{ .Values.subscription.source }}
+  sourceNamespace: {{ .Values.subscription.sourceNamespace }}
+  startingCSV: {{ .Values.subscription.startingCSV }}
