--- a/RH-schema-registry/values.yaml
+++ b/RH-schema-registry/values.yaml
@@ -1,4 +1,5 @@
 name: rh-service-registry
+installOG: false
 bootstrapServers: essence-kafka-demo-kafka-external-bootstrap-kafka-essence-demo.apps.o7pr5dba.westeurope.aroapp.io:443
 namespace: kafka-essence-demo
 userName: schema-registry-user
@@ -10,6 +11,13 @@ labels:
   - 'app: rhsr'
   - 'dep: rhsr-deployment' 
 
+subscription:
+  channel: 2.x
+  installPlanApproval: Automatic
+  name: service-registry-operator
+  source: redhat-operators
+  sourceNamespace: openshift-marketplace
+  startingCSV: service-registry-operator.v2.0.2
 
 keycloak:
   enabled: true
