support router sharding

--- a/RH-schema-registry/templates/keycloak-realm.yaml
+++ b/RH-schema-registry/templates/keycloak-realm.yaml
@@ -27,7 +27,7 @@ spec:
         publicClient: true
         redirectUris:
           - '*'
-        standardFlowEnabled: false
+        standardFlowEnabled: true
         webOrigins:
           - '*'
     displayName: {{ .Release.Name }}-keycloak-realm
