--- a/RH-schema-registry/templates/service-registry.yaml
+++ b/RH-schema-registry/templates/service-registry.yaml
@@ -16,12 +16,16 @@ spec:
           keystoreSecretName: {{ .Values.userName }}-{{ .Release.Name }}
           truststoreSecretName: {{ .Values.clusterName }}-cluster-ca-cert
 {{ if .Values.keycloak.enabled }}
+
     security:
       keycloak:
-        url: "http://keycloak-{{ .Release.Namespace }}.{{ .Values.domain }}/auth"
-        realm: {{ .Values.keycloak.realm.name | quote }}
+        url: "https://keycloak-{{ .Release.Namespace }}.{{ .Values.domain }}/auth"
         apiClientId: {{ .Values.keycloak.realm.uiClientID | quote }}
         uiClientId: {{ .Values.keycloak.realm.apiClientID | quote }}
+        realm: "{{ .Release.Name }}-keycloak-realm"
 {{ end }}
     logLevel: {{.Values.logLevel }}
     persistence: {{ .Values.persistence }}
+  deployment:
+    host: >-
+      rh-service-registry-{{ .Release.Name }}-{{ .Release.Namespace }}
