--- a/kafka-ui/values.yaml
+++ b/kafka-ui/values.yaml
@@ -5,7 +5,7 @@ image:
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
-
+domain: fo-sut.pintc010042040201050a001.sut.azr.fusionoperate.io
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -27,18 +27,18 @@ auth:
 #set as true if you need to use email domain authentication
   useEmailDomain: true
 #select the mail domain to be allowed for authentication
-  emailDomain: redhat.com
+  emailDomain: dh.com
 #set true if you need to use role based authentication
-  useSar: true
+  useSar: false
 #select the resource where access is needed for a user to it in order to be able to bypass the proxy
 #  "namespace":"app-dev","resource":"services","name":"proxy","verb":"get"}
   resource:
-    namespace: "nemer-amq"
+    namespace: "fo-kafka-perf"
     kind: "services"
-    name: city-bank-kafka-ui
+    name: kafka-ui-proxy
     verb: get
 #select cookie secret name must be 16 bytes or 24 or 32
-  cookieSecretName: SECRET1234567890123456
+  cookieSecretName: SECRET1234567890123455
 #cookie saving refresh rate in seconds
   cookieRefreshSec: 20
 #number of replicas for the deployment
@@ -56,8 +56,8 @@ kafka:
   # zkkeystoreItem: keystore.p12
   truststoreFileLocation: /etc/kafka/truststore
   keystoreFileLocation: /etc/kafka/keystore
-  truststoreSecret: my-kafka-cluster-ca-secret-name
-  keystoreSecret: my-keystore-secret-name
+  truststoreSecret: sut-kafka-cluster-ca-cert
+  keystoreSecret: schema-registry-user-rhsrr
   truststoreItem: ca.p12
   keystoreItem: user.p12
 
@@ -66,13 +66,13 @@ existingConfigMap: ""
 existingSecret: ""
 envs:
   config: 
-    KAFKA_CLUSTERS_0_NAME: "demo-kafka"
-    KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'https://kakfa-bootstrap-servers:1234'
+    KAFKA_CLUSTERS_0_NAME: "sut-kafka"
+    KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'https://sut-kafka-external-bootstrap-fo-kafka-perf.fo-sut.pintc010042040201050a001.sut.azr.fusionoperate.io:443'
     KAFKA_CLUSTERS_0_PROPERTIES_SECURITY_PROTOCOL: SSL
     KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_LOCATION: "/etc/kafka/keystore/user.p12"
-    KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_PASSWORD: "jAkhncrqsrgs"
+    KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_PASSWORD: "f7EcUT8RMQ8Y"
     KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_LOCATION: "/etc/kafka/truststore/ca.p12"
-    KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_PASSWORD: "M7E5g37nB04X"
+    KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_PASSWORD: "eVmsiFeaRsSR"
   secret: {}
 podAnnotations: {}
 
