feat: chart now takes a list of schemas correlated with a list of topics
BREAKING CHANGE: chart now longer takes a tar.gz archive of schemas

--- a/schema-pusher/Chart.yaml
+++ b/schema-pusher/Chart.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v2
 name: schema-pusher
-version: 1.2.0
-appVersion: 0.3.0
+version: 1.2.1-SNAPSHOT
+appVersion: 1.0.0
 description: A Helm chart for pushing schema files to Red Hat's Service Registry
 type: application
 keywords:
