--- a/schema-pusher/Chart.yaml
+++ b/schema-pusher/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: schema-pusher
-version: 1.2.1-SNAPSHOT
+version: 2.0.0
 appVersion: 1.0.0
 description: A Helm chart for pushing schema files to Red Hat's Service Registry
 type: application
