feat: added ability to set custom properties
BREAKING CHANGE: topics and schema are combined into an object called
messages for better redabilty and rubustness.
--topic[0]=sometopic --schema[0]=AKS7k...
is now
--messages[0].topic=sometompic --messages[0].schema=AKS7k...

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/schema-pusher/templates/configmap.yaml
+++ b/schema-pusher/templates/configmap.yaml
@@ -1,6 +1,7 @@
 ---
 apiVersion: v1
 kind: ConfigMap
+immutable: true
 metadata:
   name: {{ .Release.Name }}-configmap
   labels:
@@ -9,11 +10,12 @@ data:
   kafka.bootstrap: {{ .Values.kafka.bootstrap }}
   service.registry: {{ .Values.service.registry }}
   naming.strategy: {{ .Values.naming.strategy }}
-{{- range $i, $t := .Values.topics }}
-  topic{{$i}}: {{$t}}
+{{- if .Values.kafka.properties }}
+{{- range .Values.kafka.properties }}
+  property_{{ .key }}: {{ .value | quote }}
+{{- end }}
 {{- end }}
 binaryData:
-{{- range $i, $s := .Values.schemas }}
-  schema{{$i}}: {{$s}}
+{{- range .Values.messages }}
+  topic_{{ .topic }}: {{ .schema }}
 {{- end }}
-immutable: true
