--- a/schema-pusher/Chart.yaml
+++ b/schema-pusher/Chart.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v2
 name: schema-pusher
-version: 2.0.0
-appVersion: 1.0.0
+version: 2.1.0-SNAPSHOT
+appVersion: 1.1.0
 description: A Helm chart for pushing schema files to Red Hat's Service Registry
 type: application
 keywords:
